fix bug of z-index background section

--- a/builder/css/base/_grid.scss
+++ b/builder/css/base/_grid.scss
@@ -24,8 +24,6 @@ html {
 		left: 0px;
 		position: absolute;
 		top: 0px;
-		z-index: -1;
-
 	}
 }
 
