--- a/builder/css/builder-assets/_blank-page.scss
+++ b/builder/css/builder-assets/_blank-page.scss
@@ -10,6 +10,7 @@
 		border-radius: 5px;
 		padding: 82px 52px 0 52px;
 		position: relative;
+		overflow: hidden;
 	}
 	.karma-blank-page-title{
 		color: $builder-main-color;
