--- a/builder/css/dashboard-style.css
+++ b/builder/css/dashboard-style.css
@@ -606,8 +606,7 @@ html {
     background-size: cover;
     left: 0px;
     position: absolute;
-    top: 0px;
-    z-index: -1; }
+    top: 0px; }
 
 .karma-container {
   margin-right: auto;
